--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
+    "@heroicons/react": "^2.0.18",
     "@mantine/hooks": "^5.8.2",
     "@mantine/modals": "^5.8.2",
     "jwt-decode": "^3.1.2",
