--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --port 3000",
-    "build": "npx tailwindcss -i ./src/tailwind.css -o ./public/style.css --watch & vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
